# EpicMusicAPI

./: .gitignore  Dockerfile  TODO.md  pyproject.toml  run.sh
src/: main.py  misc.py  test.json  test.py
src/epic_music/api/: cron_runner.py  genre_mapping.py  models.py  requests.py  websocket_handler.py
src/epic_music/database/: client.py  models.py
src/epic_music/discbot/: client.py
