[project]
name = "epic-music"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.104.1",
    "discord-py>=2.7.1",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "flask>=3.1.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.47.0",
    "websockets>=16.0",
]
